[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/monogram_extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://main/screens/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 160
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = 182.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DavidSnopekLabel" type="Label" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 51.0
text = "David Snopek's"

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 1080.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 1 )
text = "Retro Tank Party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -302.0
margin_bottom = -102.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalButton" type="Button" parent="HBoxContainer"]
margin_left = 260.0
margin_right = 480.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 0 )
text = "Practice"

[node name="OnlineButton" type="Button" parent="HBoxContainer"]
margin_left = 530.0
margin_right = 750.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 0 )
text = "Battle"

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
margin_left = 800.0
margin_right = 1020.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 0 )
text = "Settings"
[connection signal="pressed" from="HBoxContainer/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="HBoxContainer/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
